<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/content_network"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="5dp" />

    <Button
        android:id="@+id/btnWifi"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/list_selector"
        android:text="@string/wifi"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="5dp" />

    <Button
        android:id="@+id/btn3G"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/list_selector"
        android:text="@string/mobile_network"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="5dp" />

    <Button
        android:id="@+id/btnBluetooth"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/list_selector"
        android:text="@string/bluetooth"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="5dp" />

    <Button
        android:id="@+id/btnNFC"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/list_selector"
        android:text="@string/nfc"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="5dp" />

</LinearLayout>