<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/content_camera"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/time_main_test_button"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/orange" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/btnTakePicture"
            android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
            android:background="@drawable/list_selector"
            android:text="@string/take_picture"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/btnTakeVideo"
            android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
            android:background="@drawable/list_selector"
            android:text="@string/capture_video"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>