<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:padding="5dp" >

    <TextView
        android:id="@+id/tvLightIntensity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/brightness_intensity"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/orange" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tvContentLight"
        android:layout_below="@+id/tvLightIntensity" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:scaleType="centerInside"
            android:layout_gravity="center"
            android:src="@drawable/light_bg" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvContentLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSensorLightDone"
        android:padding="5dp"
        android:text="@string/content_sensor_light"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnSensorLightDone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/list_selector"
        android:text="@string/lablel_done"
        android:textColor="@color/white" />

</RelativeLayout>