<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tvVersion"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <LinearLayout
                android:id="@+id/btnLayoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/list_selector"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="6dp"
                    android:src="@drawable/ic_button" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lablel_button"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/btnLayoutScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/list_selector"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="6dp"
                    android:src="@drawable/ic_screen" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lablel_screen"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/btnLayoutTouch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/list_selector"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="6dp"
                    android:src="@drawable/ic_touch" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lablel_touch"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <LinearLayout
                android:id="@+id/btnLayoutSensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/list_selector"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="6dp"
                    android:src="@drawable/ic_sensor" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lablel_sensor"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/btnLayoutSound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/list_selector"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="6dp"
                    android:src="@drawable/ic_sound" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lablel_sound"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/btnLayoutVibration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/list_selector"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="6dp"
                    android:src="@drawable/ic_vibration" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lablel_vibration"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <LinearLayout
                android:id="@+id/btnLayoutCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/list_selector"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="6dp"
                    android:src="@drawable/ic_camera" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lablel_camera"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/btnLayoutGPS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/list_selector"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="6dp"
                    android:src="@drawable/ic_gps" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lablel_gps"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/btnLayoutNetwork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/list_selector"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="6dp"
                    android:src="@drawable/ic_network" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lablel_network"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="10dp"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btnTestAll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/list_selector"
            android:padding="10dp"
            android:text="@string/testAll"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/version"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/orange" />

</RelativeLayout>